<resources>
    <string name="app_name">BookYouLove</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="cover_image_view_descriptor">Book Cover</string>
    <string name="reading_string">Reading</string>
    <string name="read_string">Ended</string>
    <string name="tbr_string">To Be Read</string>
    <string name="charts_string">Charts</string>
    <string name="settings_string">Settings</string>
    <string name="book_cover_string">Book Cover</string>
    <string name="reading_new_string">New</string>
    <string name="finish_string">Finish</string>
    <string name="leave_string">Leave</string>
    <string name="take_note_string">Take Note</string>

    <string name="new_reading_book_string">New Reading Book</string>
    <string name="cover_link_picker_msg_sting">Enter Cover Link</string>
    <string name="link_string" translatable="false">Link</string>
    <string name="title_string">Title</string>
    <string name="author_string">Author</string>
    <string name="start_date_string">Start Date</string>
    <string name="end_date_string">End Date</string>
    <string name="reading_support_string">Reading Support</string>
    <string name="paper_string">Paper</string>
    <string name="ebook_string" translatable="false">eBook</string>
    <string name="audiobook_string">AudioBook</string>
    <string name="pages_string">Pages</string>
    <string name="language_string">Language</string>
    <string name="confirm_string">Confirm</string>
    <string name="back_string">Back</string>
    <string name="pages_picker_title">Insert Pages Amount</string>
    <string name="save_string">Save</string>
    <string name="new_book_missing_title_error_string">Must Insert Title</string>
    <string name="new_book_missing_author_error_string">Must Insert Author</string>
    <string name="new_book_missing_fields_error_string">Missing Arguments</string>
    <string name="reading_empty_list">Begin Read To See Your Book Details</string>
    <string name="edit_string">Edit</string>
    <string name="loading_string">Loading…</string>
    <string name="not_inserted_string">Not Inserted</string>
    <string name="read_settings_string">Ended Settings</string>
    <string name="grid_setting_string">Grid Layout</string>
    <string name="tbr_settings_screen">TBR settings</string>
    <string name="your_rate_string">Your Rate</string>
    <string name="end_book_dialog_title">&#128293; Congratulations!! You Ended This Book &#128293;</string>
    <string name="fire_emoticon" translatable="false">&#128293;</string>
    <string name="others_string">Others</string>
    <string name="quotes_string">Quotes</string>
    <string name="invalid_date_string">Inserted Date Not Valid</string>
    <string name="terminate_string">Terminate</string>
    <string name="detail_string">Detail</string>
    <string name="search_string">Search</string>
    <string name="ended_order_preference_string">Sort by</string>
    <string name="search_off_string">Search Off</string>
    <string name="delete_string">Delete</string>
    <string name="modify_string">Modify</string>
    <string name="alert_delete_string">Do you really want to delete this %1$s??</string>
    <string name="linear_setting_string">Linear Layout</string>
    <string name="total_rate_string">Total Rate</string>
    <string name="style_string">Style</string>
    <string name="emotions_string">Emotions</string>
    <string name="plot_string">Plot</string>
    <string name="characters_string">Characters</string>
    <string name="final_thought_string">Final Thought</string>
    <string name="total_string">Total</string>
    <string name="books_string">Books</string>
    <string name="rates_string">Rates</string>
    <string name="support_string">Support</string>
    <string name="total_books_string">Total Books</string>
    <string name="total_pages_string">Total Pages</string>
    <string name="total_support_string">Total Supports</string>
    <string name="year_string">Year</string>
    <string name="favourite_string">Favourite</string>
    <string name="add_with_camera_string">Add With Camera</string>
    <string name="quote_page_string">Quote Page</string>
    <string name="quote_chapter_string">Quote Chapter</string>
    <string name="quote_text_string">Quote Text</string>
    <string name="quote_thought_string">Your Thought</string>
    <string name="obligatory_quote_text_string">Must Insert Quote Text</string>
    <string name="rotate_string">Rotate</string>
    <string name="your_quotes_string">Your Quotes</string>
    <string name="begin_read_string">Begin Read</string>
    <string name="quote_chapter_and_page">Chapter and Page</string>
    <string name="book_string">book</string>
    <string name="quote_delete_string">quote</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="scan_string">Scan</string>
    <string name="no_internet_connection_string">No Internet Connection</string>
    <string name="no_book_found_string">No book found</string>
    <string name="pages_per_month_string">Pages Per Month</string>
    <string name="books_per_month_string">Books Per Month</string>
    <string name="style_rate_string">Style Rate</string>
    <string name="emotions_rate_string">Emotions Rate</string>
    <string name="plot_rate_string">Plot Rate</string>
    <string name="characters_rate_string">Characters Rate</string>
    <string name="goto_string">Goto</string>
    <string name="starting_dialog_title">&#128214; You are starting this book &#128214;</string>
    <string name="book_emoticon" translatable="false">&#128214;</string>
    <string name="placeholder_quote">He who does not read, at 70 years old will have lived only one life. He who reads, will have lived 5000 years. Reading is a backward immortality</string>
    <string name="leaving_dialog_title">Do you want to delete this book or move it to TBR?</string>
    <string name="move_to_tbr_string">Move to TBR</string>
    <string name="search_by_string">Search By</string>
    <string name="scan_error_string">Error in Text Scanning</string>
    <string name="crop_error_string">Error in Cropping Image</string>
    <string name="capture_error_string">Error in Capturing Image</string>
    <string name="delete_book_dialog_title">Do you really want to delete this book??</string>
    <string name="delete_quote_dialog_title">Do you really want to delete this quote??</string>
    <string name="upload_string">Upload</string>
    <string name="download_string">Download</string>
    <string name="login_string" translatable="false">Login</string>
    <string name="logout_string" translatable="false">Logout</string>
    <string name="no_user_found">No User Found</string>
    <string name="signin_error_string">Login Error</string>
    <string name="upload_completed_string">Upload Completed</string>
    <string name="operation_wrong_string">Ops! Operation didn\'t have success!</string>
    <string name="operation_completed_string">Operation Completed!!</string>
    <string name="goto_google_drive_string">Go To Google Drive</string>
    <string name="download_completed_string">Download Completed!! Please Restart The App</string>
    <string name="general_settings_string">General Settings</string>
    <string name="date_format_string">Date Format</string>
    <string name="favorite_string">Favorite</string>
    <string name="icon_string">Icon</string>
    <string name="flip_string">Flip/Flop</string>
    <string name="google_drive_logo_string">Google Drive Logo</string>
    <string name="google_drive_name" translatable="false">Google Drive</string>
    <string name="google_books_preview_string">Google Books Preview</string>
    <string name="take_string">Take</string>
    <string name="guess_the_quote_string" translatable="false">Guess The Quote</string>
    <string name="search_online_string">Search Online</string>
    <string name="scan_isdn_error_string">Error Scanning ISBN!! Please Try Restart!!</string>
    <string name="search_favorite_string">Search Favorite</string>
    <string name="share_with_string">Share</string>
    <string name="not_favorite_string">Not Favorite</string>
    <string name="new_quote_for_you_string">New Quote For You!!</string>
    <string name="average_time_per_book">Average Days Per Book</string>
    <string name="average_pages_per_book">Average Pages Per Book</string>
    <string name="notify_change_quote_favorite_state">Changed Quote State To</string>
    <string name="change_state_notification_string">Change State Notification</string>
    <string name="coming_soon_string">Coming Soon!!</string>
    <string name="confirm_restore_title_string">Are you sure you want to restore??</string>
    <string name="confirm_restore_message_string">All current data will be deleted to restore a previous state saved in Google Drive!!</string>
    <string name="pay_string">Play</string>
    <string name="history_string">History</string>
    <string name="gtq_open_alert_string">Need Three Endede Book and Ten Quotes To Play!!</string>
</resources>