<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/readingContextMenuTerminateItem"
        android:title="@string/terminate_string"
        android:visible="true" />
    <item
        android:id="@+id/readingContextMenuLeaveItem"
        android:title="@string/leave_string"
        android:visible="true" />
    <item
        android:id="@+id/readingContextMenuDetailItem"
        android:title="@string/detail_string"
        android:visible="true" />
    <item
        android:id="@+id/readingContextMenuTakeNoteItem"
        android:icon="@drawable/ic_round_edit_note"
        android:title="@string/take_note_string"
        app:showAsAction="always" />
    <item
        android:id="@+id/readingContextMenuQuotesListItem"
        android:title="@string/your_quotes_string" />
</menu>