<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/endedMenuSearchItem"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_string"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />
    <group
        android:checkableBehavior="single"
        android:enabled="true"
        android:menuCategory="alternative">
        <item
            android:checked="true"
            android:title="@string/title_string"
            app:showAsAction="never"></item>
        <item
            android:title="@string/author_string"
            app:showAsAction="never" />
        <item
            android:title="@string/your_rate_string"
            app:showAsAction="never" />
    </group>
</menu>