<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/read_settings_string">

        <SwitchPreference
            android:defaultValue="false"
            android:key="endedLinearLayout"
            android:title="@string/linear_setting_string" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/ended_order_array_entries"
            android:entryValues="@array/ended_order_array_entry_values"
            android:key="endedOrderPreference"
            android:title="@string/ended_order_preference_string"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/tbr_settings_screen">
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/tbr_order_array_entries"
            android:entryValues="@array/tbr_order_array_values"
            android:key="tbrOrderPreference"
            android:title="@string/ended_order_preference_string"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>