<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.QuoteWithCameraAnalyzerFragment">

    <ImageView
        android:id="@+id/quoteWithCameraAnalyzerImageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/quote_with_camera_analyzer_image_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <Button
        android:id="@+id/quoteWithCameraAnalyzerBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:text="@string/back_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quoteWithCameraAnalyzerImageView" />

    <Button
        android:id="@+id/quoteWithCameraAnalyzerConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:text="@string/confirm_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quoteWithCameraAnalyzerImageView" />

    <Button
        android:id="@+id/quoteWithCameraAnalyzerRotateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rotate_string"
        app:icon="@drawable/ic_round_rotate_icon"
        app:layout_constraintBottom_toBottomOf="@+id/quoteWithCameraAnalyzerConfirmButton"
        app:layout_constraintEnd_toStartOf="@+id/quoteWithCameraAnalyzerConfirmButton"
        app:layout_constraintStart_toEndOf="@+id/quoteWithCameraAnalyzerBackButton" />
</androidx.constraintlayout.widget.ConstraintLayout>